Added exec:// schema to execute scripts